tests/ui/cfg/path-kw-as-cfg-pred.stderr
error: `crate` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:70:10
   |
LL |     cfg!(r#crate);
   |          ^^^^^^^

error: `super` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:72:10
   |
LL |     cfg!(r#super);
   |          ^^^^^^^

error: `self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:74:10
   |
LL |     cfg!(r#self);
   |          ^^^^^^

error: `Self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:76:10
   |
LL |     cfg!(r#Self);
   |          ^^^^^^

error: `_` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:85:10
   |
LL |     cfg!(r#_);
   |          ^^^

error: `crate` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:88:7
   |
LL | #[cfg(r#crate)]
   |       ^^^^^^^

error: `super` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:91:7
   |
LL | #[cfg(r#super)]
   |       ^^^^^^^

error: `self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:94:7
   |
LL | #[cfg(r#self)]
   |       ^^^^^^

error: `Self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:97:7
   |
LL | #[cfg(r#Self)]
   |       ^^^^^^

error: `crate` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:100:12
   |
LL | #[cfg_attr(r#crate, cfg(r#crate))]
   |            ^^^^^^^

error: `crate` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:100:25
   |
LL | #[cfg_attr(r#crate, cfg(r#crate))]
   |                         ^^^^^^^

error: `super` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:105:12
   |
LL | #[cfg_attr(r#super, cfg(r#super))]
   |            ^^^^^^^

error: `super` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:105:25
   |
LL | #[cfg_attr(r#super, cfg(r#super))]
   |                         ^^^^^^^

error: `self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:110:12
   |
LL | #[cfg_attr(r#self, cfg(r#self))]
   |            ^^^^^^

error: `self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:110:24
   |
LL | #[cfg_attr(r#self, cfg(r#self))]
   |                        ^^^^^^

error: `Self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:115:12
   |
LL | #[cfg_attr(r#Self, cfg(r#Self))]
   |            ^^^^^^

error: `Self` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:115:24
   |
LL | #[cfg_attr(r#Self, cfg(r#Self))]
   |                        ^^^^^^

error: `_` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:125:7
   |
LL | #[cfg(r#_)]
   |       ^^^

error: `_` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:131:12
   |
LL | #[cfg_attr(r#_, cfg(r#_))]
   |            ^^^

error: `_` cannot be a raw identifier
  --> $DIR/path-kw-as-cfg-pred.rs:131:21
   |
LL | #[cfg_attr(r#_, cfg(r#_))]
   |                     ^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:18:7
   |
LL | #[cfg(crate)]
   |       ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:20:7
   |
LL | #[cfg(super)]
   |       ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:22:7
   |
LL | #[cfg(self)]
   |       ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:24:7
   |
LL | #[cfg(Self)]
   |       ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:26:12
   |
LL | #[cfg_attr(crate, path = "foo")]
   |            ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:28:12
   |
LL | #[cfg_attr(super, path = "foo")]
   |            ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:30:12
   |
LL | #[cfg_attr(self, path = "foo")]
   |            ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:32:12
   |
LL | #[cfg_attr(Self, path = "foo")]
   |            ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:34:22
   |
LL | #[cfg_attr(true, cfg(crate))]
   |                      ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:36:22
   |
LL | #[cfg_attr(true, cfg(super))]
   |                      ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:38:22
   |
LL | #[cfg_attr(true, cfg(self))]
   |                      ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:40:22
   |
LL | #[cfg_attr(true, cfg(Self))]
   |                      ^^^^

error: expected identifier, found keyword `struct`
  --> $DIR/path-kw-as-cfg-pred.rs:43:7
   |
LL | #[cfg(struct)]
   |       ^^^^^^ expected identifier, found keyword

error: expected identifier, found reserved keyword `priv`
  --> $DIR/path-kw-as-cfg-pred.rs:45:7
   |
LL | #[cfg(priv)]
   |       ^^^^ expected identifier, found reserved keyword

error: expected identifier, found reserved identifier `_`
  --> $DIR/path-kw-as-cfg-pred.rs:47:7
   |
LL | #[cfg(_)]
   |       ^ expected identifier, found reserved identifier

error: expected identifier, found keyword `struct`
  --> $DIR/path-kw-as-cfg-pred.rs:49:12
   |
LL | #[cfg_attr(struct, path = "foo")]
   |            ^^^^^^ expected identifier, found keyword
   |
help: escape `struct` to use it as an identifier
   |
LL | #[cfg_attr(r#struct, path = "foo")]
   |            ++

error: expected identifier, found reserved keyword `priv`
  --> $DIR/path-kw-as-cfg-pred.rs:51:12
   |
LL | #[cfg_attr(priv, path = "foo")]
   |            ^^^^ expected identifier, found reserved keyword
   |
help: escape `priv` to use it as an identifier
   |
LL | #[cfg_attr(r#priv, path = "foo")]
   |            ++

error: expected identifier, found reserved identifier `_`
  --> $DIR/path-kw-as-cfg-pred.rs:53:12
   |
LL | #[cfg_attr(_, path = "foo")]
   |            ^ expected identifier, found reserved identifier

error: expected identifier, found keyword `struct`
  --> $DIR/path-kw-as-cfg-pred.rs:55:22
   |
LL | #[cfg_attr(true, cfg(struct))]
   |                      ^^^^^^ expected identifier, found keyword

error: expected identifier, found reserved keyword `priv`
  --> $DIR/path-kw-as-cfg-pred.rs:57:22
   |
LL | #[cfg_attr(true, cfg(priv))]
   |                      ^^^^ expected identifier, found reserved keyword

error: expected identifier, found reserved identifier `_`
  --> $DIR/path-kw-as-cfg-pred.rs:59:22
   |
LL | #[cfg_attr(true, cfg(_))]
   |                      ^ expected identifier, found reserved identifier

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:88:7
   |
LL | #[cfg(r#crate)]
   |       ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:91:7
   |
LL | #[cfg(r#super)]
   |       ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:94:7
   |
LL | #[cfg(r#self)]
   |       ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:97:7
   |
LL | #[cfg(r#Self)]
   |       ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:100:12
   |
LL | #[cfg_attr(r#crate, cfg(r#crate))]
   |            ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:100:25
   |
LL | #[cfg_attr(r#crate, cfg(r#crate))]
   |                         ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:105:12
   |
LL | #[cfg_attr(r#super, cfg(r#super))]
   |            ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:105:25
   |
LL | #[cfg_attr(r#super, cfg(r#super))]
   |                         ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:110:12
   |
LL | #[cfg_attr(r#self, cfg(r#self))]
   |            ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:110:24
   |
LL | #[cfg_attr(r#self, cfg(r#self))]
   |                        ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:115:12
   |
LL | #[cfg_attr(r#Self, cfg(r#Self))]
   |            ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:115:24
   |
LL | #[cfg_attr(r#Self, cfg(r#Self))]
   |                        ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:7:15
   |
LL |         #[cfg($crate)]
   |               ^^^^^^
...
LL |     foo!();
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:9:20
   |
LL |         #[cfg_attr($crate, path = "foo")]
   |                    ^^^^^^
...
LL |     foo!();
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:11:30
   |
LL |         #[cfg_attr(true, cfg($crate))]
   |                              ^^^^^^
...
LL |     foo!();
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:14:14
   |
LL |         cfg!($crate);
   |              ^^^^^^
...
LL |     foo!();
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:65:10
   |
LL |     cfg!(crate);
   |          ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:66:10
   |
LL |     cfg!(super);
   |          ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:67:10
   |
LL |     cfg!(self);
   |          ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:68:10
   |
LL |     cfg!(Self);
   |          ^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:70:10
   |
LL |     cfg!(r#crate);
   |          ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:72:10
   |
LL |     cfg!(r#super);
   |          ^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:74:10
   |
LL |     cfg!(r#self);
   |          ^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/path-kw-as-cfg-pred.rs:76:10
   |
LL |     cfg!(r#Self);
   |          ^^^^^^

error: expected identifier, found keyword `struct`
  --> $DIR/path-kw-as-cfg-pred.rs:79:10
   |
LL |     cfg!(struct);
   |          ^^^^^^ expected identifier, found keyword

error: expected identifier, found reserved keyword `priv`
  --> $DIR/path-kw-as-cfg-pred.rs:80:10
   |
LL |     cfg!(priv);
   |          ^^^^ expected identifier, found reserved keyword

error: expected identifier, found reserved identifier `_`
  --> $DIR/path-kw-as-cfg-pred.rs:81:10
   |
LL |     cfg!(_);
   |          ^ expected identifier, found reserved identifier

error: aborting due to 68 previous errors

